# orcho-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dco.yml  release.yml  scorecard.yml
.orcho/multiagent/: plugin.py
agents/: __init__.py  command_guard.py  entities.py  managed_command.py  owned_child.py  protocols.py  pty_diagnostics.py  registry.py  stall_protocol.py  stream.py  stream_log.py  stream_stall.py  stream_transport.py
agents/runtimes/: __init__.py  _failures.py  _strategy.py  auth.py  claude.py  claude_glm.py  codex.py  codex_skills.py  codex_telemetry.py  gemini.py  identity.py
agents/stream_parsers/: __init__.py  claude_jsonl.py  codex_jsonl.py  gemini_jsonl.py  skill_registry.py  tool_invocations.py
cli/: _cross_launch.py  _evidence_cli.py  _evidence_cli_full.py  _formatters.py  _help.py  _managed_command.py  _profile_menu.py  _profile_prompt.py  _quality_gates.py  _repair_state.py  _run.py  _task_prompt.py  _workspace_runtime_gate.py  install_guard.py  orcho.py
core/: __init__.py
core/_config/: config.defaults.json  pipeline_profiles_v2.json  pricing.openai.snapshot.json
core/_prompts/: AGENTS.md  README.md
core/_runtime_wrappers/: __init__.py  claude-glm.cmd  claude-glm.sh
core/context/: __init__.py
core/contracts/: commit_decision_schema.py  cross_plan_schema.py  plan_schema.py  release_schema.py  review_schema.py  subtask_attestation_schema.py
core/infra/: __init__.py  config.py  demo_assets.py  lazy.py  paths.py  platform.py  runtime_wrappers.py
core/io/: AGENTS.md  __init__.py  ansi.py  delivery_summary.py  encoding.py  git_helpers.py  journey_prompt.py  output_elision.py  pipeline_block.py  prompt_loader.py  retry.py  stdout_render.py  summary_lines.py  terminal_input.py  transcript.py  verification_header.py
core/observability/: __init__.py  accounting_display.py  event_hub.py  event_kinds.py  events.py  live_card.py  logging.py  metrics.py  phases.py  pricing.py  pricing_scrapers.py  prompt_trace.py  trace.py
docs/: README.md  authoring-task-files.md  sdk_schema.json
docs/adr/: 0001-pipeline-redesign.md  0002-frozen-dataclasses-strict-invariants.md  0003-two-axis-profiles.md  0004-typed-stepoutcome-vs-bool-halt.md  0005-dag-as-execution-mode.md  0006-session-adapter-not-runner-bus.md  0007-gates-as-data-not-code.md  0008-pipelinerun-collapse.md  0009-composable-prompt-parts.md  0010-review-repair-contract.md  0019-stepoutcome-fsm-active.md  0020-run-evidence-in-core.md  0021-public-sdk-boundary.md  0022-phase-taxonomy-cleanup.md  0023-runtime-protocol-collapse.md  0024-cross-profile-projection.md  0025-release-gate-and-cross-final-acceptance.md  0026-session-aware-prompt-parts.md  0027-execution-surfaces.md  0028-cache-first-physical-wire-layout.md  0029-context-lifecycle.md  0030-runtime-context-autonomy.md  0031-generic-phase-handoff-contract.md  0032-commit-decision-gate.md  0033-worktree-foundation.md  0034-sandbox-isolation-layered.md  0035-terminal-status-and-resume-observability.md  0036-agent-session-persistence-across-subprocess-restart.md  0037-cross-project-halt-artifacts.md  0038-cross-plan-phase-handoff-parity.md  0039-review-repair-phase-handoff.md  0040-shared-orchestration-control-primitives.md  0041-public-sdk-events-surface.md  0042-project-pipeline-application-boundary.md  0043-commit-delivery-apply-action.md  0044-pre-run-dirty-intake.md  0045-run-status-artefact-map.md  0046-silent-app-level-boundary.md  0047-cross-project-application-boundary.md  0048-replay-first-event-delivery-hub.md  (+112 more)
docs/architecture/: automation_principle.md  cross_project_pipeline.md  execution_modes.md  managed_command_lifecycle.md  observability_surfaces.md  overview.md  phase_lifecycle.md  project_documentation_strategy.md  prompt_engine.md  prompt_engine_deep_dive.md  quality_gates.md  run_state.md  run_state_machine.md  runtime_identity_diagnostics.md  sandbox.md  semantic_profiles_alignment.md  session_shape.md  verification_contract.md
docs/creator/: 01_architecture.md  02_package_structure.md  03_agent_contracts.md  04_pipeline_internals.md  05_core_subdomains.md  06_testing.md  07_roadmap.md  08_contributing.md  09_dev_workflow.md
docs/demos/: demo-1a-single-project-cli.md  demo-handoff-cli-smoke.md
docs/examples/: typed_boundary_consumer.md
docs/expert/: 01_plugin.md  02_prompts.md  03_config.md  04_pipeline_phases.md  05_windows.md  06_windows_os_adapters_plan.md
docs/guides/: claude_glm_runtime.md  (+5 more)
examples/: README.md
pipeline/: agent_resolver.py  allowed_modifications.py  argv.py  attachment_inject.py  attachment_loader.py  checkpoint.py  commit_message_parser.py  dag_runner.py  entry_points.py  json_contract.py  lifecycle.py  participant_promotion.py  participants.py  plan_artifacts.py  plan_contract.py  plan_markdown.py  plan_parser.py  plugins.py  presentation.py  project_orchestrator.py  project_testing.py  quality_gates.py  release_markdown.py  release_parser.py  repair_protocol.py  review_markdown.py  review_parser.py  session_adapters.py  subtask_attestation_parser.py  subtask_attestation_repair.py  subtask_substance_repair.py  verification_command.py  verification_contract.py  verification_delivery.py  verification_dependencies.py  verification_env.py  verification_execution.py  verification_failure.py  verification_ledger.py  verification_ledger_store.py  (+6 more)
sdk/: __init__.py  _jsonable.py  _runspace_context.py  _time.py  actions.py  cost.py  cross_execution_graph.py  cross_execution_graph_state.py  cross_parent_state.py  errors.py  events.py  evidence.py  evidence_slices.py  fine_tune.py  handoff_advice.py  history.py  metrics.py  phase_handoff.py  pricing.py  profile_customize.py  profiles.py  prompts.py  run_diff.py  runner.py  runs.py  runtimes.py  status.py  types.py  verification_timeline.py  verify.py  workspace.py  workspace_scaffold.py
shell/: orcho-env-base.ps1  orcho-env-base.sh  orcho-promote  orcho-promote.ps1
tests/: README.md  conftest.py
tools/: dump_sdk_schema.py  orcho-watch.py
(+879 files in other folders)
